[gd_scene load_steps=4 format=2]

[ext_resource path="res://GraphSprite.png" type="Texture" id=1]
[ext_resource path="res://Graph.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 250, 200 )

[node name="Graph" type="Node2D"]
z_index = 1
script = ExtResource( 2 )

[node name="GraphArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GraphArea"]
position = Vector2( 250, 200 )
z_index = -3
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 250, 200 )
scale = Vector2( 2, 2 )
z_index = -2
texture = ExtResource( 1 )

[node name="Debug" type="Button" parent="."]
margin_left = 9.43298
margin_top = -29.988
margin_right = 92.433
margin_bottom = -9.98796
text = "Add Node"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset Join" type="Button" parent="."]
margin_left = 103.926
margin_top = -29.9016
margin_right = 206.926
margin_bottom = -9.90158
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Debug" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Reset Join" to="." method="_on_Reset_Join_pressed"]
