[gd_scene load_steps=7 format=2]

[ext_resource path="res://Ressources/Sprites/9Part3Alpha.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Graph.gd" type="Script" id=2]
[ext_resource path="res://Ressources/Sprites/Reset.png" type="Texture" id=3]
[ext_resource path="res://Ressources/Fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 138.214, 108.115 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 4 )

[node name="Graph" type="Node2D"]
position = Vector2( 174.864, 150.837 )
z_index = 10
script = ExtResource( 2 )

[node name="GraphArea" type="Area2D" parent="."]
z_index = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="GraphArea"]
position = Vector2( 152.446, 119.334 )
z_index = 9
shape = SubResource( 1 )

[node name="Sprite" type="NinePatchRect" parent="."]
margin_right = 305.0
margin_bottom = 238.0
texture = ExtResource( 1 )
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset Join" type="Button" parent="."]
margin_left = 250.0
margin_top = -48.0
margin_right = 294.0
margin_bottom = -7.0
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinLeft" type="Label" parent="."]
margin_left = 244.0
margin_top = 13.0
margin_right = 284.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 2 )
text = "4"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Reset Join" to="." method="_on_Reset_Join_pressed"]
